--- a/Monster_Traiding_Cards_Game/Monster_Traiding_Cards.csproj
+++ b/Monster_Traiding_Cards_Game/Monster_Traiding_Cards.csproj
@@ -11,4 +11,9 @@
     <PackageReference Include="Npgsql" Version="9.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Repositories\" />
+	  <Folder Include="Database\" />
+  </ItemGroup>
+
 </Project>
