--- a/Monster_Traiding_Cards_Game/Monster_Traiding_Cards.csproj
+++ b/Monster_Traiding_Cards_Game/Monster_Traiding_Cards.csproj
@@ -9,6 +9,11 @@
 
   <ItemGroup>
     <PackageReference Include="Npgsql" Version="9.0.2" />
+	  <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.1" />
+	  <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.1" />
+	  <Content Include="appsettings.json">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </Content>
   </ItemGroup>
 
 </Project>
